--- a/consecionarioUQ/.classpath
+++ b/consecionarioUQ/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/kevde/Downloads/Nueva carpeta/controlsfx-8.40.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevde/Downloads/Nueva carpeta/fontawesomefx-8.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevde/Downloads/Nueva carpeta/jfoenix-8.0.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
